--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
            <div class="num24"><h1>savol24</h1><button onclick="delet(event)" id="clear">Clear</button></div>
 
     </div>
-
+    <h3>Made by:@_khak1mov_001_</h3>
     <script src="main.js"></script>
 </body>
 
